--- a/main.css
+++ b/main.css
@@ -4,3 +4,48 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+header {
+    background-color: #5f27cd;
+    padding: 16px 0;
+    color: #fff;
+    display: flex;
+    /*botao fica do lado do titulo*/
+    border-bottom: 16px solid #341f97;
+    justify-content: center;
+    /*deixa tudo centralizado*/
+    text-transform: uppercase;
+    font-style: italic;
+}
+
+header button {
+    margin-left: 16px;
+}
+
+form {
+    background-color: #c8d6e5;
+    padding: 24px 0;
+    text-align: center;
+}
+
+form h2 {
+    margin-bottom: 16px
+}
+
+input,
+button {
+    padding: 8px;
+}
+
+button {
+    background-color: #009432;
+    border: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+    cursor: pointer;
+}
+
+#button-cancelar {
+    background-color: red;
+}
